--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,6 @@ repositories {
 dependencies {
     compile 'com.rabbitmq:amqp-client:5.5.0'
     compile 'org.slf4j:slf4j-simple:1.6.2'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
 
 }
